--- a/WorldMap/worldmap-page.css
+++ b/WorldMap/worldmap-page.css
@@ -10,6 +10,9 @@
 
 canvas {
     border: 1px solid black;
+    background-image: url("mapBackground.jpg");
+    background-position: center;
+    background-size: cover;
     /* width: 1120;
     height: 1120; 
     min-width: auto;
@@ -42,12 +45,12 @@ canvas {
 }
 #toolbar2 {
     display: flex;
-    align-content: left;
+    align-content: right;
     flex-direction: column;
     padding: 5px;
     width: 9%;
 
-    background-image: url("land.jpg");
+    background-image: url("land2.jpg");
     background-repeat: no-repeat; 
     background-position: center;
     background-size: cover;
